全然わからん

--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CGドンジャラNEO ユニット検索</title>
+</head>
+<body>
+    <div class="card">
+        <h1>手牌から作れそうなユニットを検索</h1>
 
+        <h2>手牌</h2>
+
+    </div>
+    
+    <script src="script.js"></script>
+</body>
+</html>
