実装チェック

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
         <h1>手牌から作れそうなユニットを検索</h1>
 
         <h2>手牌</h2>
+        <input id="input">
+        <button onclick="cuteBtn_clicked()">キュート</button>
+        <button onclick="coolBtn_clicked()">クール</button>
+        <button onclick="passionBtn_clicked()">パッション</button>
+        <div id ="output"></div>
+
 
     </div>
     
