--- a/sample/sample.html
+++ b/sample/sample.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>im@sparql|2人が所属しているユニット検索</title>
-  <link rel="stylesheet" href="./styles.css" />
+  <link rel="stylesheet" href="sample\styles.css" />
 </head>
 <body>
   <div class="card">
@@ -32,6 +32,6 @@
     エンドポイント: <code>https://sparql.crssnky.xyz/spql/imas/query</code>
   </footer>
 
-  <script src="script.js" defer></script>
+  <script src="sample\script.js" defer></script>
 </body>
 </html>
