手札配列に入れるようにした

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             <button onclick="coolBtn_clicked()">クール</button>
             <button onclick="passionBtn_clicked()">パッション</button>
         </div>
-        <div id="popup_cute" style="display:none;position:fixed;top:30%;left:50%;transform:translate(-50%,-50%);
+        <div id="popup" style="display:none;position:fixed;top:30%;left:50%;transform:translate(-50%,-50%);
   background:#fff;border:1px solid #ccc;padding:20px;z-index:1000;min-width:280px;">
             <h3>メンバーを選択</h3>
-            <div id="popup-members_cute" style="max-height:260px;overflow-y:auto;padding-right:4px;">
+            <div id="popup-members" style="max-height:260px;overflow-y:auto;padding-right:4px;">
                 <!-- メンバーリストがここに表示されます -->
             </div>
             <button onclick="closePopup()">閉じる</button>
