画像を表示できるように

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h2>手牌</h2>
 
         <div id="myHand_output"></div>
-        <div class="nan">
+        <div class="row">
             <button onclick="cuteBtn_clicked()">キュート</button>
             <button onclick="coolBtn_clicked()">クール</button>
             <button onclick="passionBtn_clicked()">パッション</button>
